--- a/app/src/main/res/layout/activity_face_verification.xml
+++ b/app/src/main/res/layout/activity_face_verification.xml
@@ -45,4 +45,17 @@
         app:layout_constraintTop_toBottomOf="@+id/takepicTV"
         app:layout_constraintVertical_bias="0.271" />
 
+    <Button
+        android:id="@+id/goToBook"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/takePicBtn2"
+        app:layout_constraintVertical_bias="0.312" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
