--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -29,7 +29,7 @@
         android:layout_height="124dp"
         android:layout_marginTop="48dp"
         android:fontFamily="sans-serif-black"
-        android:text="[Book Name]"
+        android:text=""
         android:textAlignment="center"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         android:layout_height="214dp"
         android:layout_marginTop="92dp"
         android:fontFamily="sans-serif-black"
-        android:text="[Task finish message]"
+        android:text=""
         android:textAlignment="center"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
         android:layout_height="154dp"
         android:layout_marginTop="40dp"
         android:fontFamily="sans-serif-black"
-        android:text="[Book ID]"
+        android:text=""
         android:textAlignment="center"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
