--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -7,33 +7,18 @@
     android:layout_height="match_parent"
     tools:context=".GuideActivity">
 
-    <!-- <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="125dp"
-        android:layout_marginTop="300dp"
-        android:layout_marginEnd="125dp"
-        android:layout_marginBottom="383dp"
-        android:text="Level 2-Shelf 5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-        -->
 
     <TextView
         android:id="@+id/book_name"
         android:layout_width="293dp"
         android:layout_height="124dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="sans-serif-black"
         android:text=""
         android:textAlignment="center"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.59"
+        app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskFinishTxt" />
 
@@ -41,7 +26,7 @@
         android:id="@+id/taskFinishTxt"
         android:layout_width="289dp"
         android:layout_height="214dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="148dp"
         android:fontFamily="sans-serif-black"
         android:text=""
         android:textAlignment="center"
@@ -55,7 +40,7 @@
         android:id="@+id/book_id"
         android:layout_width="307dp"
         android:layout_height="154dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="sans-serif-black"
         android:text=""
         android:textAlignment="center"
@@ -76,6 +61,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/undo" />
+
+    <TextView
+        android:id="@+id/countdownTimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="68dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
